<resources>
    <string name="app_name">easyDesign</string>
    <string name="title_activity_login">Sign_in1</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">首页</string>
    <string name="idea">想法</string>
    <string name="publish">发布</string>
    <string name="project">案例</string>
    <string name="person">个人</string>
    <string name="home_page_first">鼠标</string>
    <string name="home_page_second">微信</string>
    <string name="home_page_third">火箭</string>
    <string name="home_page_forth">笔</string>
    <string name="loading_list">正在加载更多</string>
    <string name="finish_list">没有更多了</string>
    <string name="no_news">没有新的内容</string>
    <array name="logindengji">
        <item name = "xiaobai">建筑小白</item>
        <item name = "nuli">正在努力</item>
        <item name = "xiaocheng">小有成就</item>
        <item name = "dashen">建筑大神</item>
    </array>
    <string name="isNew">已经是最新内容了</string>
    <string name="error">出错了</string>
    <string name="load">点击加载</string>
    <string name="big">
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
        abcdef\n
        abcde\n
        abcd\n
        abc\n
        ab\n
        a\n
    </string>
</resources>
