<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:name="cn.edu.hebut.easydesign.Activity.Fragment.HomePage.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_content" />
    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:alpha="1"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_page"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:alpha="1"
            android:drawableTop="@drawable/shouye"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/thinking_page"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/idea"
            android:text="@string/idea" />

        <RadioButton
            android:id="@+id/publish_page"
            style="@style/rb_style_publish"
            android:layout_height="60dp"
            android:drawableTop="@drawable/wenzhang"
            android:text="@string/publish" />

        <RadioButton
            android:id="@+id/example_page"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/anli"
            android:text="@string/project" />

        <RadioButton
            android:id="@+id/user_page"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/person"
            android:text="@string/person" />


    </RadioGroup>

</RelativeLayout>