<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="-5sp"
            android:paddingBottom="-5sp"
            app:srcCompat="@drawable/taitou" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="top"
                    android:adjustViewBounds="true" />

                <LinearLayout
                    android:id="@+id/points"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginTop="-10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                </LinearLayout>


                <SearchView
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </SearchView>

                <LinearLayout
                    android:id="@+id/tubiao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <cn.edu.hebut.easydesign.Activity.commonComponents.ImageWithTextView
                        android:id="@+id/home_card_first"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:image="@drawable/shubiao"
                        app:text="@string/home_page_first" />

                    <cn.edu.hebut.easydesign.Activity.commonComponents.ImageWithTextView
                        android:id="@+id/home_card_second"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:image="@drawable/weixin"
                        app:text="@string/home_page_second" />

                    <cn.edu.hebut.easydesign.Activity.commonComponents.ImageWithTextView
                        android:id="@+id/home_card_third"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:image="@drawable/huojian"
                        app:text="@string/home_page_third" />

                    <cn.edu.hebut.easydesign.Activity.commonComponents.ImageWithTextView
                        android:id="@+id/home_card_forth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        app:image="@drawable/bi"
                        app:text="@string/home_page_forth" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:alpha="1"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/zhuye"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:alpha="1"
            android:drawableTop="@drawable/shouye"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/idea"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/idea"
            android:text="@string/idea" />

        <RadioButton
            android:id="@+id/fabu"
            style="@style/rb_style_publish"
            android:layout_height="60dp"

            android:drawableTop="@drawable/wenzhang"
            android:text="@string/publish" />

        <RadioButton
            android:id="@+id/anli"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/anli"
            android:text="@string/project" />

        <RadioButton
            android:id="@+id/geren"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/person"
            android:text="@string/person" />


    </RadioGroup>

</RelativeLayout>