<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.hebut.easydesign.Activity.MainActivity">


    <LinearLayout
        android:id="@+id/intro_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/taitou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/taitou" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="top"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="-10dp"
            android:gravity="center"
            android:orientation="horizontal" />

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </SearchView>


        <LinearLayout
            android:id="@+id/tubiao"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shubiao"
                style="@style/style_tubiao"
                android:background="@drawable/shubiao"></ImageView>

            <ImageView
                android:id="@+id/weixin"
                style="@style/style_tubiao"
                android:background="@drawable/weixin"></ImageView>

            <ImageView
                android:id="@+id/huojian"
                style="@style/style_tubiao"
                android:background="@drawable/huojian"></ImageView>

            <ImageView
                android:id="@+id/bi"
                style="@style/style_tubiao"
                android:background="@drawable/bi"></ImageView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_page_first"
                android:textSize="10dp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_page_second"
                android:textSize="10dp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_page_third"
                android:textSize="10dp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_page_forth"
                android:textSize="10dp"></TextView>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rg_main"
        android:layout_below="@+id/intro_layout">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/zhuti1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/biankuang_hui"
                    android:gravity="center"
                    android:src="@drawable/zhujiemian4" />

                <ImageView
                    android:id="@+id/zhuti2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/biankuang_hui"
                    android:gravity="center"
                    android:src="@drawable/zhujiemian5" />


            </LinearLayout>
        </ScrollView>
    </FrameLayout>


    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/zhuye"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/shouye"
            android:text="@string/home"></RadioButton>

        <RadioButton
            android:id="@+id/idea"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/idea"
            android:text="@string/idea"></RadioButton>

        <RadioButton
            android:id="@+id/fabu"
            style="@style/rb_style_publish"
            android:layout_height="60dp"

            android:drawableTop="@drawable/wenzhang"
            android:text="@string/publish"></RadioButton>

        <RadioButton
            android:id="@+id/anli"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/anli"
            android:text="@string/project"></RadioButton>

        <RadioButton

            android:id="@+id/geren"
            style="@style/rb_style"
            android:layout_height="50dp"
            android:drawableTop="@drawable/person"
            android:text="@string/person"></RadioButton>


    </RadioGroup>


</RelativeLayout>